--- a/index.html
+++ b/index.html
@@ -18,26 +18,26 @@
         <div class="col-sm-12 col-lg-6 p-0">
           <div class="row">
             <div class="box bg-teal col-sm-12 col-md-6">
-              <p>Psychology</p>
+              <p class="text-light fs-2 fw-bold">Psychology</p>
             </div>
             <div class="box bg-pink col-sm-12 col-md-6">
-              <p>Archeology</p>
+              <p class="text-light fs-2 fw-bold">Archeology</p>
             </div>
           </div>
           <div class="row">
             <div class="box bg-purple col-sm-12 col-md-6">
-              <p>Leadership</p>
+              <p class="text-light fs-2 fw-bold">Leadership</p>
             </div>
             <div class="box bg-orange col-sm-12 col-md-6">
-              <p>Science</p>
+              <p class="text-light fs-2 fw-bold">Science</p>
             </div>
           </div>
           <div class="row">
             <div class="box bg-dk-purple col-sm-12 col-md-6">
-              <p>Space</p>
+              <p class="text-light fs-2 fw-bold">Space</p>
             </div>
             <div class="box bg-yellow col-sm-12 col-md-6">
-              <p>Technology</p>
+              <p class="text-light fs-2 fw-bold">Technology</p>
             </div>
           </div>
         </div>
