--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap">
+    <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     
 </head>
 <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-sm-12 col-lg-6">
-          <img src="https://via.placeholder.com/700x750" alt="">
+        <div class="hero text-light col-sm-12 col-lg-6">
+          <div class="mt-5">
+            <h1 class="text-center">Daily Read</h1>
+            <h6 class="fs-6 font-monospace text-uppercase text-center">Staying current on <br/>your interests</h6>
+          </div>
         </div>
         <div class="col-sm-12 col-lg-6 p-0">
           <div class="row">
